--- a/css/styles.css
+++ b/css/styles.css
@@ -50,31 +50,36 @@ ul {
     letter-spacing: 0.02em;
 }
 
-.nav-link:hover
+.nav-link:hover,
 .nav-link:focus{
     color:var(--accent-color);
 }
 
-.nav-link .current{
+.current{
     color: var(--accent-color);
 }
 
 .contact-link{
     color: var(--main-text);
     text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
-.contact-link:hover{
+
+.contact-link:hover, 
+.contact-contact:focus{
     color: var(--accent-color);
 }
 
 /* -------------Main------------ */
 
-.section{
+.hero{
     background-color:var(--main-section);
 }
-.section-title{
+.hero-title{
     color:var(--main-white);
-    font-family: 'Roboto';
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -109,7 +114,16 @@ ul {
 }
 
 .visually-hidden{
-
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
 }
 
 .about-title{
@@ -125,7 +139,7 @@ ul {
     letter-spacing: 0.03em;
 }
 
-.subtitle{
+.section-title{
     color:var(--secondary-text);
     font-size: 36px;
     line-height: 1.16;
@@ -207,19 +221,12 @@ ul {
 .footer-contact{
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
-    font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
 
 }
  .footer-contact:hover,
  .footer-contact:focus{
-    color: var(--accent-color);
- }
-
- .google-contact:hover,
- .google-contact:focus{
     color: var(--accent-color);
  }
 
@@ -234,17 +241,18 @@ ul {
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
+    cursor: pointer;
+    Border: none;
  }
 
  .button-portfolio{
     background-color: var(--section-team);
     color: var(--main-section);
-    transition: 0.7s;
  }
 
  .button-portfolio.desk{
     background-color: var(--accent-color);
-    color: var(--logo-black-color);
+    color: var(--main-white);
  }
 
  .button-portfolio.desk:hover{
@@ -258,7 +266,6 @@ ul {
 
  .project-name{
     color: var(--secondary-text);
-    font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
@@ -266,7 +273,6 @@ ul {
 
  .project-text{
     color: var(--main-text);
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
